Modify index file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 <a href="https://play.google.com/store/apps/details?id=com.ini.niiflicks" class="download-btn-div" >
                     <img src="./Google-Play-Button-Graphic.png" class="play-store" alt="">
                 </a>
-                <img src="./apple-store-button.png" class="play-store" alt="">
+                <a href="#">
+                    <img src="./apple-store-button.png" class="play-store" alt="">
+                </a>
              </div>
         </div>
         <div class="card">
