Modify index file

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
              <div class="download-div">
-                <a href="https://play.google.com/store/apps/details?id=com.ini.niiflicks" class="download-btn-div" >
+                <a href="https://play.google.com/store/apps/details?id=com.ini.niiflicks" >
                     <img src="./Google-Play-Button-Graphic.png" class="play-store" alt="">
                 </a>
                 <a href="#">
