--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/brands.css">
-    <link rel="stylesheet" href="css/brands.min.css">
-    <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="css/all.min.css">
+
     <link rel="stylesheet" href="uch.css">
 
     <script src="https://use.fontawesome.com/9d5cafa7d2.js"></script>
@@ -24,8 +17,6 @@
       body {
         font-family: 'Crimson Pro', serif;
         font-size: 16px;
-
-
       }
     </style>
   </head>
@@ -33,7 +24,7 @@
     <header class="showcase">
       <div class="showcase-top">
         <img src="./niiflicks-logo.png" alt="App_Logo" class="img-fluid">
-        <input class="search" type="text" placeholder="Find Movies">
+        <input class="search" type="text" placeholder="Find Movies" id="search" onenter=>
 
       </div>
       <div class="movieContainer">
@@ -73,15 +64,24 @@
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/60d49e5d65b7290ac637ba75/1f8v8l7dp';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/60d49e5d65b7290ac637ba75/1f8v8l7dp';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+
+
+      fetch("https://www.googleapis.com/books/v1/volumes?q=maths")
+      .then(response => {
+        console.log(response);
+      })
+      .catch(err => {
+        console.error(err);
+      });
     </script>
     <!--End of Tawk.to Script-->
     <script src="js/main.js" type="module"></script>
