--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <link rel="stylesheet" href="uch.css">
-
-    <script src="https://use.fontawesome.com/9d5cafa7d2.js"></script>
-
     <title>Niiflicks - Watch Movies Online</title>
 
+    <link rel="stylesheet" href="uch.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
     <style>
@@ -20,6 +16,7 @@
       }
     </style>
   </head>
+
   <body>
     <header class="showcase">
       <div class="showcase-top">
@@ -57,7 +54,15 @@
                 <h2 class="space"> or a Film Maker? </h2>
             </div>
             <div class="creator-btn">
-                <p> <a href="http://producers.niiflicks.com/">Login <i class="fa fa-"></i></a>&nbsp;<a href="http://producers.niiflicks.com/signup.html">Signup </i></a> </p>
+                <p>
+                  <a href="http://producers.niiflicks.com/">
+                    Login <i class="fas fa-right"></i>
+                  </a>
+                    &nbsp;
+                    <a href="http://producers.niiflicks.com/signup.html">
+                      Signup <i class="fas fa-arrow-alt-circle-left"></i>
+                    </a>
+                </p>
             </div>
         </div>
     </div>
@@ -84,6 +89,7 @@
       });
     </script>
     <!--End of Tawk.to Script-->
+    <script src="https://use.fontawesome.com/0bb1cf78cb.js"></script>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
