--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     Login <i class="fas fa-right"></i>
                   </a>
                     &nbsp;
-                    <a href="http://producers.niiflicks.com/signup.html">
+                    <a href="https://producers.niiflicks.com/register">
                       Signup <i class="fas fa-arrow-alt-circle-left"></i>
                     </a>
                 </p>
